# Grap

./: main.py  middleware.ts  pyproject.toml
scripts/: 002_seed_categories.sql
scripts /: 001_create_tables.sql
