[tool.poetry]
name = "video-downloader" # Renamed for clarity
version = "0.1.0"
description = "A simple web app to download and play videos."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12.11,<3.12" # Adjusted to cover common Replit versions, but feel free to target higher
flask = "^3.0.0"
gunicorn = "^21.2.0" # Gunicorn is used by Replit for production deployment
yt-dlp = "^2025.7.1" # Updated to a more current version (as of current date)

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
